WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183864
[Web Animations] Ensure animationcancel and transitioncancel events are dispatched
https://bugs.webkit.org/show_bug.cgi?id=183864
Summary
[Web Animations] Ensure animationcancel and transitioncancel events are dispa...
Antoine Quint
Reported
2018-03-21 12:44:54 PDT
[Web Animations] Ensure animationcancel and transitioncancel events are dispatched
Attachments
Patch
(23.74 KB, patch)
2018-03-21 12:50 PDT
,
Antoine Quint
dino
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2018-03-21 12:50:41 PDT
Created
attachment 336223
[details]
Patch
Dean Jackson
Comment 2
2018-03-21 12:53:52 PDT
Comment on
attachment 336223
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=336223&action=review
> Source/WebCore/animation/AnimationTimeline.cpp:139 > + if (oldStyle && oldStyle->hasAnimations() && oldStyle->display() != NONE && newStyle.display() == NONE) {
At some point, we should get rid of this NONE value for display and use a better enum.
WebKit Commit Bot
Comment 3
2018-03-21 14:22:32 PDT
Comment on
attachment 336223
[details]
Patch Rejecting
attachment 336223
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 336223, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: a/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 73, in run_and_handle_errors self._run(tool, options, state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 67, in _run step(tool, options).run(state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 54, in run if changelog_entry.has_valid_reviewer(): AttributeError: 'NoneType' object has no attribute 'has_valid_reviewer' Full output:
http://webkit-queues.webkit.org/results/7056108
Antoine Quint
Comment 4
2018-03-21 14:49:09 PDT
Committed
r229829
: <
https://trac.webkit.org/changeset/229829
>
Radar WebKit Bug Importer
Comment 5
2018-03-21 14:50:48 PDT
<
rdar://problem/38724033
>
Jon Lee
Comment 6
2019-06-19 17:17:00 PDT
***
Bug 161535
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug